Стили модального окна
добавляет в модальное окно форму;
задаёт стили;

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -5,7 +5,7 @@
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
-      <b class="contact-modal__title section__title">Our Location</b>
+      <b class="contact-modal__title section__title">Order</b>
   
       <!-- добавить адапитв рисунка -->
       <picture class="contact-modal__img">
@@ -24,6 +24,76 @@
       </picture>
 
 
+            <div class="modal-buy__block">
+
+<!-- ==========здесь должна быть форма заказа мороженного==== -->
+      <form class="modal-buy__form">
+        <h2 class="section__label modal-buy__title">Сделайте заказ</h2>
+        <div>
+          <label class="form-field">
+            <input
+              type="text"
+              class="form-input"
+              name="user-name"
+              autofocus
+              required
+              placeholder=" "
+            />
+            <span class="form-label">Имя</span>
+            <!-- <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-close"></use>
+            </svg> -->
+          </label>
+
+          <label class="form-field">
+            <input type="tel" class="form-input" name="tel" required placeholder=" " />
+            <span class="form-label">Телефон</span>
+            <!-- <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-close"></use>
+            </svg> -->
+          </label>
+
+          <label class="form-field">
+            <input type="email" class="form-input" name="email" required placeholder=" " />
+            <span class="form-label">Почта</span>
+            <!-- <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-close"></use>
+            </svg> -->
+          </label>
+        </div>
+
+        <!-- === -->
+        <div class="comment-section">
+          <label for="comment" class="comment-label">Комментарий</label>
+          <textarea
+            class="comment"
+            name="comment"
+            id="comment"
+            placeholder="Введите текст"
+          ></textarea>
+        </div>
+
+
+        <!-- <div class="policy">
+          <label class="policy-field"
+            ><input type="checkbox" class="checkbox" name="policy" required />
+            <span class="checkbox-icon"></span>
+            <span class="checkbox-label">Соглашаюсь с рассылкой и принимаю</span>
+            <a href="#" class="checkbox-link">Условия договора</a>
+          </label>
+        </div> -->
+
+        <button type="submit" class="button button--white">Отправить</button>
+      </form>
+   
+<!-- ==========здесь должна закончиться форма заказа мороженного==== -->
+
+      <div class="modal-buy__box modal-buy__box--bottom">
+        <div class="modal-buy__circle">Hello world</div>
+        <div class="modal-buy__circle">Hello world</div>
+        <div class="modal-buy__circle">Hello world</div>
+        
+      </div>
       <!--=========== кнопки home  Franchise============-->
 
       <!-- <div class="contact-modal__button-box">
@@ -36,27 +106,9 @@
       </div> -->
 
 <!--=========== кнопки home  Franchise   end ============-->
+            </div>
 
-
-      <!-- <div class="contact-modal__frame">
-        <iframe
-          src="https://www.google.com/maps/d/u/0/embed?mid=1GjoIbMz_y6WZ2c9CCroh4yJi62FcQs4F&ehbc=2E312F"
-          class="contact-modal__map"
-        ></iframe> -->
-  
-        <!-- <div class="modal-box">
-          <ul class="modal-box__list">
-            <li class="modal-box__item">
-              <span class="modal-box__num">23</span>
-              <p class="modal-box__coffes">food trucks</p>
-            </li>
-            <li class="modal-box__item">
-              <span class="modal-box__num">16</span>
-              <p class="modal-box__coffes">cafes</p>
-            </li>
-          </ul>
-        </div> -->
-      </div>
+    </div>
   
      
     
