--- a/src/sass/components/_modal-buy.scss
+++ b/src/sass/components/_modal-buy.scss
@@ -27,9 +27,17 @@
     min-height: 75vh;
     width: 100%;
 
+    margin-left: auto;
+    margin-right: auto;
+
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-    background-color: var(--light-section-bgc);
+    background-image: linear-gradient(
+      to right top,
+      rgba(211, 45, 117, 0.8) ,
+      rgba(238, 174, 202, 0.8) ,
+      rgba(170, 65, 170, 0.6)     
+      );
   
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -135,33 +143,7 @@
       }
     }
   }
-  
-  // .contact-modal__frame {
-  //   position: relative;
-  //   width: 100%;
-  //   max-width: 500px;
-  //   margin: 48px auto;
-  //   height: 100%;
-  //   margin-top: 48px;
-  //   margin-bottom: 48px;
-  //   box-shadow: (0px 8px 30px rgba(212, 20, 67, 0.1));
-  
-  //   @media screen and (min-width: $tablet) {
-  //     width: 620px;
-  //     height: 482px;
-  //   }
-  
-  //   @media screen and (min-width: $desktop) {
-  //     max-width: 700px;
-  //   }
-  // }
-  
-  // .contact-modal__map {
-  //   width: 100%;
-  //   height: 100%;
-  //   min-height: 270px;
-  //   border: none;
-  // }
+ 
   
   .modal-box {
     position: relative;
@@ -223,13 +205,13 @@
     }
   }
   
-  .contact-modal__button {
-    display: block;
-    min-width: 160px;
-    margin: 0 auto;
+  // .contact-modal__button {
+  //   display: block;
+  //   min-width: 160px;
+  //   margin: 0 auto;
   
     
-  }
+  // }
   
   .contact-modal__button:not(:last-child) {
   
@@ -254,4 +236,191 @@
   //     }
   //   }
   // }
+  // 
+
+
+// =======modal buy block контейнер для формы и кругов
+
+
+.modal-buy__block {
+  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+  // form здесь форма начинается
+
+  .modal-buy__form {
+    margin-top: 20px;
+  }
+
+  .modal-buy__title {
+    color: var(--light-brand-color);
+    margin-bottom: 30px;
+  }
+
+  .form-field {
+    position: relative;
+    display: block;
+  }
+  .form-field:not(:last-child) {
+    margin-bottom: 28px;
+  }
+  .form-input {
+    width: 100%;
+    height: 40px;
+  
+    padding: 12px 12px 12px 42px;
+    border: 5px solid rgba(167, 25, 136, 0.637);
+    
+    border-radius: 30%;
+  
+    transition: border-color 250ms var(--timing-function);
+  }
+  .form-input:hover,
+  .comment:hover {
+    cursor: pointer;
+  }
+  .form-label {
+    position: absolute;
+    top: 50%;
+    left: 42px;
+    transform: translateY(-50%);
+  
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+  
+    transition: transform 250ms var(--timing-function);
+  }
+  .form-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+  
+    transition: fill 250ms var(--timing-function);
+  }
+  .form-field:focus-within .form-label {
+    transform: translate(-38px, -38px);
+  }
+  .form-field:focus-within .form-icon {
+    fill: var(--accent-color);
+  }
+  .form-field .form-input:focus {
+    border-color: var(--accent-color);
+    outline: var(--accent-color);
+  }
+  .form-input:not(:placeholder-shown) + .form-label {
+    transform: translate(-38px, -38px);
+  }
+  /* ======= */
+  .comment-section {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  .comment {
+    display: block;
+    width: 100%;
+    height: 120px;
+    resize: none;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    box-shadow: inset 0 0 10px 5px rgba(230, 101, 140, 0.527);
+  
+    transition: border-color 250ms var(--timing-function);
+  }
+  .comment-label {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    
+  }
+  .comment::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+  
+    color: rgba(117, 117, 117, 0.5);
+  }
+  .comment:focus {
+    border-color: var(--accent-color);
+    outline: var(--accent-color);
+  }
+ 
+ 
+  
+  .form-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+    transform: scale(1);
+    transition: transform 250ms var(--timing-function), background-color 250ms var(--timing-function);
+  }
+  
+
+// form здесь форма заканчивается
+
+
+  
+  .modal-buy__box {
+    border: 2px dashed #2a2a2a;
+    border-radius: 4px;
+    display: flex;
+   
+    justify-content: space-around;
+    align-items: center;
+    min-height: calc(10vh);
+    width: 80%;
+  }
+
+
+  .modal-buy__box--bottom {
+
+    margin-top: 30px;
+
+  }
+
+  .modal-buy__circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: min-content;
+    height: 50px;
+    // flex-shrink: 0;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+                0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+                0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  
+    transition-property: transform;
+    transition-duration: 1000ms;
+
+    background-image: radial-gradient(
+      circle at center,
+      var(--brand-color) 10%, 
+      var(--accent-color) 50%
+    );
+
+          
+  }
+  
+  .modal-buy__box:hover .modal-buy__circle {
+    transform: scale(1.5);
+  }
+  
+  .circle:nth-child(1) {
+    
+  
+    transition-duration: 1000ms;
+  }
   
