--- a/src/sass/components/_contact-modal.scss
+++ b/src/sass/components/_contact-modal.scss
@@ -34,6 +34,7 @@ z-index: 950;
     transform: translate(-50%, -50%) scale(1);
     max-width: 700px;
     min-height: 760px;
+    max-height: 75vh;
     width: 100%;
   }
 
