--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -42,12 +42,8 @@
     </div>
 
     <div class="contact-modal__button-box">
-      <a href="./" class="contact-modal__link">
-        <button class="button button--white contact-modal__button">Home</button></a
-      >
-      <a href="#" class="contact-modal__link"
-        ><button class="button button--pink contact-modal__button">Franchise</button></a
-      >
+      <a href="./" class="contact-modal__link">Home</a>
+      <button class="button button--white contact-modal__button">Franchise</button>
     </div>
   </div>
 </div>
