--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -44,7 +44,7 @@
             orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat
             urna maximus. Cras massa nibh, tincidunt.
           </p>
-          <p class="about__text about__text--light">Aliquam erat volutpat. Aenean accumsan.</p>
+          <p class="about__text about__text--light about__text--last">Aliquam erat volutpat. Aenean accumsan.</p>
           <button type="button" class="button button--white about__btn">Read more</button>
         </div>
       </div>
