--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="hero">
   <div class="hero__block container">
-    <h1
+    <div class="hero__ckontent">
+      <h1
       class="hero__titel section__title animate__animated animate__backInLeft animate__delay-0.5s"
     >
       <span class="hero___titel--white section__label"
@@ -9,10 +10,12 @@
       >
       PASSION
     </h1>
-    <div class="hero__button-block">
-      <a href="#our-products" class="button hero__button"> Products </a>
-      <a href="#how-it-made" class="button hero__button hero__button--white"> How its made? </a>
+    <ul class="hero__button-block">
+      <li><a href="#our-products" class="button hero__button"> Products </a></li>
+      <li><a href="#how-it-made" class="button hero__button hero__button--white"> How its made? </a></li>
+    </ul>
     </div>
+    
     <picture>
       <source
         srcset="
