Add webp to About/Hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,14 +23,14 @@
       />
       <source
         srcset="
-          ./images/Hero/hero-icecream-tablet.png     1x,
+          ./images/Hero/hero-icecream-tablet.webp    1x,
           ./images/Hero/hero-icecream-tablet@2x.webp 2x
         "
         media="(min-width:768px)"
       />
       <source
         srcset="
-          ./images/Hero/hero-icecream-mobile.png     1x,
+          ./images/Hero/hero-icecream-mobile.webp    1x,
           ./images/Hero/hero-icecream-mobile@2x.webp 2x
         "
         media="(min-width:320px)"
