--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <div class="hero__block container">
-    <div class="hero__ckontent">
+    <div class="hero__content">
       <h1
       class="hero__titel section__title animate__animated animate__backInLeft animate__delay-0.5s"
     >
