--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -66,7 +66,7 @@
 }
 
 /*-------------btn--------------------*/
-.hero__ckontent {
+.hero__content {
   padding-top: 193px;
   padding-bottom: 160px;
   @media screen and (min-width: $tablet) {
