--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,3 +1,17 @@
+.products__section {
+  @media screen and (max-width: $mobile-only) {
+    padding-top: 80px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    padding-top: 110px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 130px;
+  }
+}
+
 .products__title {
   margin-bottom: 145px;
 
@@ -5,6 +19,7 @@
     margin-bottom: 260px;
   }
 }
+
 .products {
   color: var(--main-bgc);
 
@@ -35,24 +50,22 @@
     &:not(:last-child) {
       margin-bottom: 130px;
     }
-       max-width: 280px;
-       margin-left: auto;
-       margin-right: auto;
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: $tablet) {
     &:not(:last-child) {
       margin-right: 20px;
     }
-    padding: 150px 10px 40px 10px;
-    max-height: 590px;
- 
+    max-width: 485px;
+    padding: 150px 11px 40px 11px;
   }
   @media screen and (min-width: $desktop) {
     &:not(:last-child) {
-      margin-right: 30px;
+      margin-right: 25px;
     }
-    max-height: 735px;
-    padding: 160px 45px 45px 50px;
+    padding: 160px 45px 50px 45px;
   }
 }
 
@@ -236,6 +249,15 @@
   cursor: pointer;
 
   background-color: var(--main-bgc);
+
+  transition: background-color 0.25s linear, transform 0.25s linear;
+
+  &:hover,
+  &:focus {
+    background-color: var(--light-button-bgc);
+    transform: scale(1.2);
+    outline-color: var(--accent-color);
+  }
 }
 
 .btn-icon {
@@ -243,18 +265,3 @@
   height: 12px;
   fill: var(--accent-color);
 }
-
-.products__section {
-@media screen and (max-width: $mobile-only) {
-  padding-top: 80px;
-}
-
-@media screen and (min-width: $tablet) {
-  padding-top: 110px;
-}
-
-@media screen and (min-width: $desktop) {
-  padding-top: 130px;
-}
-
-} 
