--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -35,10 +35,10 @@
     &:not(:last-child) {
       margin-bottom: 130px;
     }
-       max-width: 350px;
-       height: 485px;
-       margin-left: auto;
-       margin-right: auto;
+    max-width: 350px;
+    height: 485px;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media screen and (min-width: $tablet) {
     &:not(:last-child) {
@@ -46,7 +46,6 @@
     }
     padding: 150px 10px 40px 10px;
     max-height: 590px;
- 
   }
   @media screen and (min-width: $desktop) {
     &:not(:last-child) {
@@ -234,9 +233,24 @@
   border-radius: 50%;
   border-style: none;
 
+  transition: color 200ms linear, background-color 200ms linear, box-shadow 200ms linear,
+    transform 200ms linear;
+
   cursor: pointer;
 
-  background-color: var(--main-bgc);
+  background-color: var(--products-btn-bgc);
+  &:hover,
+  &:focus {
+    background-color: var(--second-products-btn-bgc);
+    box-shadow: -2px 3px 3px var(--second-products-btn-shadow);
+    transform: scale(1.1);
+    border: 1px solid var(--second-products-btn-border);
+    padding-right: 6px;
+  }
+  &:active {
+    box-shadow: -1px 1px 2px var(--second-products-btn-shadow);
+    transform: scale(1);
+  }
 }
 
 .btn-icon {
@@ -246,16 +260,15 @@
 }
 
 .products__section {
-@media screen and (max-width: $mobile-only) {
-  padding-top: 80px;
-}
+  @media screen and (max-width: $mobile-only) {
+    padding-top: 80px;
+  }
 
-@media screen and (min-width: $tablet) {
-  padding-top: 110px;
-}
+  @media screen and (min-width: $tablet) {
+    padding-top: 110px;
+  }
 
-@media screen and (min-width: $desktop) {
-  padding-top: 130px;
+  @media screen and (min-width: $desktop) {
+    padding-top: 130px;
+  }
 }
-
-} 
