--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -61,7 +61,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et
       </p>
-      <a class="hero__btn-milk" href="#"></a>
+      <button type="button" class="hero__btn-milk" href="#"></button>
     </div>
     <div class="hero__box">
       <ul class="hero__list">
