--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,20 +2,24 @@
   <div class="hero__block container">
     <div class="hero__content">
       <h1
-      class="hero__titel section__title animate__animated animate__backInLeft animate__delay-0.5s"
-    >
-      <span class="hero___titel--white section__label"
-        >ice cream <br />
-        made with</span
+        class="hero__titel section__title animate__animated animate__backInLeft animate__delay-0.5s"
       >
-      PASSION
-    </h1>
-    <ul class="hero__button-block">
-      <li><a href="#our-products" class="button hero__button"> Products </a></li>
-      <li><a href="#how-it-made" class="button hero__button hero__button--white"> How its made? </a></li>
-    </ul>
+        <span class="hero___titel--white section__label"
+          >ice cream <br />
+          made with</span
+        >
+        PASSION
+      </h1>
+      <ul class="hero__button-block">
+        <li class="hero__item-btn">
+          <a href="#our-products" class="button hero__button"> Products </a>
+        </li>
+        <li class="hero__item-btn">
+          <a href="#how-it-made" class="button hero__button hero__button--white"> How its made? </a>
+        </li>
+      </ul>
     </div>
-    
+
     <picture>
       <source
         srcset="
@@ -64,7 +68,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et
       </p>
-      <button type="button" class="hero__btn-milk" href="#"></button>
+      <button type="button" class="hero__btn-milk"></button>
     </div>
     <div class="hero__box">
       <ul class="hero__list">
