--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -75,6 +75,17 @@
 .hero__content {
   
 }
+.hero__item-btn {
+  &:not(:last-child) {
+     margin-right: 10px;
+  }
+@media screen and (min-width: $desktop) {
+   &:not(:last-child) {
+     margin-right: 17px;
+   }
+}
+  
+}
 .hero__button {
   width: 61.2px;
   height: 24px;
@@ -84,7 +95,7 @@
   font-size: 8px;
   font-weight: 400;
   line-height: 1.25;
-  margin-right: 10px;
+ 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -98,9 +109,7 @@
     line-height: 1.28;
     width: 104px;
     height: 40px;
-    &:not(:last-child) {
-      margin-right: 17px;
-    }
+   
   }
   &:hover,
   &:focus {
