--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,18 +1,18 @@
 .hero {
   background-color: var(--brand-color);
-  background-image: url(../images/Hero/ellipse-mob.png);
-  background-repeat: no-repeat;
-  background-position: right;
+  // background-image: url(../images/Hero/ellipse-mob.png);
+  // background-repeat: no-repeat;
+  // background-position: right;
 
-  @media screen and (min-width: $tablet) {
-    background-image: url(../images/Hero/ellipse-tab.png);
-    background-position: center right 35%;
-  }
+  // @media screen and (min-width: $tablet) {
+  //   background-image: url(../images/Hero/ellipse-tab.png);
+  //   background-position: center right 35%;
+  // }
 
-  @media screen and (min-width: $desktop) {
-    background-image: url(../images/Hero/ellipse.png);
-    background-position: center right 35%;
-  }
+  // @media screen and (min-width: $desktop) {
+  //   background-image: url(../images/Hero/ellipse.png);
+  //   background-position: center right 35%;
+  // }
 }
 .hero__block {
   position: relative;
@@ -176,7 +176,7 @@ bottom: 45px;
 .hero__item {
   @media screen and (min-width: $tablet) {
    
-    background-image: url(../images/Hero/ellipse-white.png);
+    // background-image: url(../images/Hero/ellipse-white.png);
 
     background-repeat: no-repeat;
    background-position: right 15% top 0%;
