--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,19 +1,19 @@
 .hero {
   background-color: var(--brand-color);
 
-  // background-image: url(../images/Hero/ellipse-mob.png);
-  // background-repeat: no-repeat;
-  // background-position: right;
+  background-image: url(../images/Hero/ellipse-mob.png);
+  background-repeat: no-repeat;
+  background-position: right;
 
-  // @media screen and (min-width: $tablet) {
-  //   background-image: url(../images/Hero/ellipse-tab.png);
-  //   background-position: center right 35%;
-  // }
+  @media screen and (min-width: $tablet) {
+    background-image: url(../images/Hero/ellipse-tab.png);
+    background-position: center right 35%;
+  }
 
-  // @media screen and (min-width: $desktop) {
-  //   background-image: url(../images/Hero/ellipse.png);
-  //   background-position: center right 35%;
-  // }
+  @media screen and (min-width: $desktop) {
+    background-image: url(../images/Hero/ellipse.png);
+    background-position: center right 35%;
+  }
 
 }
 .hero__block {
@@ -181,7 +181,7 @@ bottom: 45px;
   @media screen and (min-width: $tablet) {
    
 
-    // background-image: url(../images/Hero/ellipse-white.png);
+    background-image: url(../images/Hero/ellipse-white.png);
 
 
     background-repeat: no-repeat;
