--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -8,7 +8,7 @@
   padding-bottom: 160px;
  
 
-  background-image: url(../images/Hero/ellipse-mob.png);
+  background-image: url(../images/Hero/Ellipse-mob.png);
 
   background-repeat: no-repeat;
   background-position: right;
@@ -19,13 +19,13 @@
     background-position: center right ;
   }
   @media screen and (min-width: $tablet) {
-    background-image: url(../images/Hero/ellipse-tab.png);
+    background-image: url(../images/Hero/Ellipse-tab.png);
     background-position: center right 35%;
     padding-top: 102px;
     padding-bottom: 177px;
   }
   @media screen and (min-width: $desktop) {
-    background-image: url(../images/Hero/ellipse.png);
+    background-image: url(../images/Hero/Ellipse.png);
     background-position: center right 35%;
     padding-top: 171px;
     padding-bottom: 295px;
