--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -16,8 +16,14 @@
             <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+        <ul class="contact-block">
+          <li class="contact-block__item">
+            <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contact-block__item">
+            <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
       <li class="contacts__item">
         <p class="contacts__description">FOOD TRUCK</p>
@@ -33,8 +39,14 @@
             <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+610383766284" class="contacts__link">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+        <ul class="contact-block">
+          <li class="contact-block__item">
+            <a href="tel:+610383766284" class="contacts__link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contact-block__item">
+            <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
       <li class="contacts__item">
         <p class="contacts__description">CAFE</p>
@@ -50,8 +62,14 @@
             <p class="worktime__time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
-        <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+        <ul class="contact-block">
+          <li class="contact-block__item">
+            <a href="tel:+61(0)383766284" class="contacts__link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contact-block__item">
+            <a href="mailto:noreply@envato.com" class="contacts__link">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
     </ul>
 
