--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -5,7 +5,7 @@
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <b class="contact-modal__title section__title">Our Location</b>
+    <b class="contact-modal__title js-contact-modal__title section__title">Our Location</b>
 
     <!-- добавить адапитв рисунка -->
     <picture class="contact-modal__img">
