--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -254,27 +254,27 @@
   cursor: pointer;
 background-color: var(--main-bgc);
 
-transition: background-color 0.25s linear,
-transform 0.25s linear;
+// transition: background-color 0.25s linear,
+// transform 0.25s linear;
 
-&:hover,
-&:focus {
-  background-color: var(--light-button-bgc);
-  transform: scale(1.2);
-  outline-color: var(--accent-color);
+// &:hover,
+// &:focus {
+//   background-color: var(--light-button-bgc);
+//   transform: scale(1.2);
+//   outline-color: var(--accent-color);
 
-  // background-color: var(--products-btn-bgc);
-  // &:hover,
-  // &:focus {
-  //   background-color: var(--second-products-btn-bgc);
-  //   box-shadow: -2px 3px 3px var(--second-products-btn-shadow);
-  //   transform: scale(1.1);
-  //   border: 1px solid var(--second-products-btn-border);
-  //   padding-right: 6px;
-  // }
-  // &:active {
-  //   box-shadow: -1px 1px 2px var(--second-products-btn-shadow);
-  //   transform: scale(1);
+//   background-color: var(--products-btn-bgc);
+  &:hover,
+  &:focus {
+    background-color: var(--second-products-btn-bgc);
+    box-shadow: -2px 3px 3px var(--second-products-btn-shadow);
+    transform: scale(1.1);
+    border: 1px solid var(--second-products-btn-border);
+    padding-right: 6px;
+  }
+  &:active {
+    box-shadow: -1px 1px 2px var(--second-products-btn-shadow);
+    transform: scale(1);
 
   
 
