--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,3 +20,4 @@
 @import './components/footer';
 @import './components/contact-modal.scss'; 
 @import './components/modal-buy';
+@import './components/modal-about';
