--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -47,7 +47,7 @@
           <p class="about__text about__text--light about__text--last">
             Aliquam erat volutpat. Aenean accumsan.
           </p>
-          <button type="button" class="button button--white about__btn">Read more</button>
+          <button type="button" class="button button--white about__btn modal-about-menu--open">Read more</button>
         </div>
       </div>
     </div>
