--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -97,3 +97,24 @@
 .button--white:hover::after {
   width: 17px;
 }
+
+.modal-button__close {
+  transition:   fill 250ms linear,
+                background-color 250ms linear,
+                box-shadow 250ms linear,
+                transform 250ms linear,
+                border 250ms linear;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+    background-color: var(--light-button-bgc);
+    box-shadow:-2px 3px 15px var(--hover-button-shadow) ,
+                0px 1px 10px var(--hover-button-shadow), 
+                3px 1px 6px var(--hover-button-shadow) ;
+
+    transform: scale(1.05);
+    border: 1px solid var(--accent-color);
+    // padding-right: 10px;
+  }
+}
