--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -208,7 +208,7 @@
   .contact-modal__button {
     display: block;
     min-width: 160px;
-    margin: 0 auto;
+    // margin: 0 auto;
       
   }
   
