--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -249,6 +249,7 @@
     background-color: wheat;
     overflow: scroll;
     height: 50vh;
+    margin-bottom: 20px;
 }
 
 
@@ -279,7 +280,9 @@
   }
   
 .modal-about__text {
-    overflow: scroll;}
+    overflow: scroll;
+  overflow-x:hidden;
+  }
  
 
 
