--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -248,6 +248,7 @@
     align-items: center;
     background-color: wheat;
     overflow: scroll;
+    overflow-x: hidden;
     height: 50vh;
     margin-bottom: 20px;
 }
