исправила ошибки кнопок

--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="contact-modal__button-box">
-      <a href="./" class="contact-modal__link">Home</a>
+      <a href="./" class="contact-modal__link button button--pink">Home</a>
       <button class="button button--white contact-modal__button">Franchise</button>
     </div>
   </div>
