--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,6 +1,6 @@
-<div class="contact_modal__backdrop visually-hidden" data-contact-modal>
+<div class="contact_modal__backdrop visually-hidden data-contact-modal">
   <div class="contact-modal">
-    <button class="modal-button__close" data-contact-modal-close>
+    <button class="modal-button__close data-contact-modal-close" >
       <svg class="modal-button__icon">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
