--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -75,7 +75,7 @@
 
     <ul class="contacts-button">
       <li class="contacts-button__item">
-        <button type="button" class="button button--pink contacts__button data-contact-modal-open" >
+        <button type="button" class="button button--pink contacts__button" data-contact-modal-open>
           Our Locations
         </button>
       </li>
