--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,13 +1,12 @@
-<!-- <div class="contact_modal__backdrop visually-hidden data-contact-modal">
+<div class="contact_modal__backdrop visually-hidden" data-contact-modal>
   <div class="contact-modal">
-    <button class="modal-button__close data-contact-modal-close" >
+    <button class="modal-button__close" data-contact-modal-close>
       <svg class="modal-button__icon">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
     <b class="contact-modal__title js-contact-modal__title section__title">Our Location</b>
 
-  
     <picture class="contact-modal__img">
       <source
         srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
@@ -46,4 +45,4 @@
       <button class="button button--white contact-modal__button">Franchise</button>
     </div>
   </div>
-</div> -->
+</div>
