try fix contact modal

--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,7 +1,7 @@
-<div class="contact_modal__backdrop visually-hidden" data-contact-modal>
+<div class="contact_modal__backdrop contact_modal__backdrop--hidden" data-contact-modal>
   <div class="contact-modal">
     <button class="modal-button__close" data-contact-modal-close>
-      <svg class="modal-button__icon">
+      <svg class="modal-button__icon" width="24" height="24">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
