--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -3,9 +3,9 @@ body {
   font-family: 'DM Sans', sans-serif;
   letter-spacing: 0.04em;
 
-  &.contact-modal-open {
-    overflow: hidden;
-  }
+  // &.contact-modal-open {
+  //   overflow: hidden;
+  // }
 }
 
 h1,
