fix modal buy for iphone

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,4 +1,6 @@
-<div class="modal-buy__backdrop backdrop visually-hidden modal-buy__offer modal-buy-menu__offer">
+<div
+  class="modal-buy__backdrop modal-buy__backdrop--hidden backdrop modal-buy__offer modal-buy-menu__offer"
+>
   <div class="modal-buy">
     <button class="modal-button__close modal-buy--close modal-buy-menu--close">
       <svg class="modal-button__icon">
