fix modal about for iphone

--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -1,4 +1,4 @@
-<div class="modal-about__backdrop backdrop visually-hidden modal-about__offer modal-about-menu__offer" >
+<div class="modal-about__backdrop modal-about__backdrop--hidden backdrop  modal-about__offer modal-about-menu__offer" >
     <div class="modal-about ">
       <button class="modal-button__close modal-about--close modal-about-menu--close" >
         <svg class="modal-button__icon">
