--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -1,5 +1,5 @@
 .modal-about__backdrop {
-  z-index: 9999;
+  z-index: 99;
   position: fixed;
   top: 0;
   right: 0;
@@ -12,6 +12,12 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 93px 15px;
   overflow-y: scroll;
+  visibility: visible;
+  &--hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 
 .modal-about {
